[package]
name = "foundry-images"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.19"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eyre = "0.6.12"
clap = { version = "4.5.18", features = ["derive", "env"] }
tempfile = "3.12.0"
